# agora

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  fix_events.py  konzept.md  shape-up-phase1-complete.md  shape-up-phase1.md  shape-up-phase2-cycle2.1.md  shape-up-phase2-cycle2.2.md  shape-up-phase2-cycle2.3.md  shape-up-phase2-cycle2.4.md  shape-up-phase2-cycle2.5.md  shape-up-phase2-cycle2.6.md  shape-up-phase2-cycle2.7.md  shape-up-phase2-cycle2.8.md  shape-up-phase2.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  good_first_issue.md
.github/workflows/: build.yml  ci.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/benches/: audio_benchmark.rs  crypto_benchmark.rs  network_benchmark.rs  protocol_benchmark.rs
core/src/: audio.rs  audio_processor.rs  crypto.rs  error.rs  ffi.rs  handshake.rs  ice.rs  identity.rs  lib.rs  mixer.rs  nat.rs  network.rs  protocol.rs  room.rs  storage.rs  stun.rs  tcp_punch.rs  turn.rs  upnp.rs
core/src/aec/: echo_canceller.rs  mod.rs
core/src/codec/: mod.rs  opus.rs
core/src/denoise/: mod.rs  rnnoise.rs
core/src/reputation/: challenge.rs  mod.rs  score.rs  vouch.rs
core/tests/: e2e_tests.rs  integration_tests.rs
desktop/: Cargo.toml  tauri.conf.json
desktop/icons/: icon.icns
desktop/src/: main.rs
desktop/ui/: index.html
docker/: agora-node.service  docker-compose.yml  node.toml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DESKTOP_APP_TODO.md  FEATURES.md  ROADMAP.md  TEST_REPORT.md
mobile/: README.md  pubspec.yaml
mobile/android/app/: build.gradle
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/kotlin/app/agora/agora_mobile/: MainActivity.kt
mobile/ios/Runner/: AppDelegate.swift  Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/screens/: create_room_screen.dart  home_screen.dart  join_room_screen.dart  session_screen.dart
mobile/lib/services/: agora_ffi.dart  agora_ffi_stub.dart  agora_ffi_web.dart  audio_service.dart  identity_service.dart  webrtc_service.dart
mobile/lib/widgets/: status_indicator.dart
mobile/linux/: CMakeLists.txt  my_application.cc
mobile/macos/Flutter/: GeneratedPluginRegistrant.swift
mobile/macos/Runner.xcodeproj/: project.pbxproj
mobile/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
mobile/macos/Runner/Configs/: AppInfo.xcconfig
mobile/test/: webrtc_browser_test.dart  widget_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
mobile/windows/runner/: Runner.rc  main.cpp
node/: Cargo.toml
node/src/: config.rs  dashboard.rs  discovery.rs  error.rs  main.rs  metrics.rs  node.rs  signaling.rs
node/tests/: signaling_integration_test.rs
scripts/: setup.sh
