[workspace]
resolver = "2"
members = [
    "core",
    "desktop",
    "cli",
    "node",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/agora-voice/agora"
authors = ["Agora Contributors"]

[workspace.dependencies]
libp2p = { version = "0.53", features = [
    "kad",
    "noise",
    "tcp",
    "dns",
    "tokio",
    "yamux",
    "identify",
    "ping",
    "relay",
    "dcutr",
    "autonat",
    "request-response",
] }
libp2p-swarm-derive = "0.34"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
multibase = "0.9"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
cpal = "0.15"
rubato = "0.15"
hound = "3.5"
postcard = { version = "1", features = ["alloc"] }
bytes = "1"
futures = "0.3"
async-trait = "0.1"
stun = "0.5"
chacha20poly1305 = "0.10"
hkdf = "0.12"
x25519-dalek = { version = "2", features = ["static_secrets"] }
hmac = "0.12"
base64 = "0.22"
snow = "0.9"
opus = "0.3"
nnnoiseless = "0.5"
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
toml = "0.8"
prometheus = "0.13"
lazy_static = "1.4"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
