[package]
name = "agora-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
libp2p.workspace = true
libp2p-swarm-derive.workspace = true
futures = "0.3"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
multibase.workspace = true
sha2.workspace = true
hex = "0.4"
urlencoding = "2.1"
cpal.workspace = true
rubato.workspace = true
hound.workspace = true

[dev-dependencies]
tokio-test = "0.4"
hex = "0.4"
