[package]
name = "agora-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
libp2p.workspace = true
libp2p-swarm-derive.workspace = true
futures = "0.3"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
multibase.workspace = true
sha2.workspace = true
hex = "0.4"
urlencoding = "2.1"
cpal.workspace = true
rubato.workspace = true
hound.workspace = true
bincode.workspace = true
bytes.workspace = true
async-trait.workspace = true
stun.workspace = true
chacha20poly1305.workspace = true
hkdf.workspace = true
x25519-dalek.workspace = true
hmac.workspace = true
base64.workspace = true
snow.workspace = true
opus.workspace = true
nnnoiseless.workspace = true
socket2 = "0.5"
if-addrs = "0.13"
libc = "0.2"
dirs = "5"
tempfile = "3"

[dev-dependencies]
tokio-test = "0.4"
hex = "0.4"
criterion = "0.5"

[[bench]]
name = "crypto_benchmark"
harness = false

[[bench]]
name = "audio_benchmark"
harness = false

[[bench]]
name = "network_benchmark"
harness = false

[[bench]]
name = "protocol_benchmark"
harness = false
